--- a/dsmrd/configure.ac
+++ b/dsmrd/configure.ac
@@ -22,6 +22,28 @@ AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AM_SILENT_RULES([yes])
 AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
+AC_CHECK_FUNCS([memset])
+AC_CHECK_FUNCS([regcomp])
+AC_CHECK_FUNCS([select])
+AC_CHECK_FUNCS([socket])
+AC_CHECK_FUNCS([strerror])
+AC_CHECK_HEADERS([fcntl.h])
+AC_CHECK_HEADERS([limits.h])
+AC_CHECK_HEADERS([netinet/in.h])
+AC_CHECK_HEADERS([stdlib.h])
+AC_CHECK_HEADERS([string.h])
+AC_CHECK_HEADERS([strings.h])
+AC_CHECK_HEADERS([sys/socket.h])
+AC_CHECK_HEADERS([sys/time.h])
+AC_CHECK_HEADERS([syslog.h])
+AC_CHECK_HEADERS([termios.h])
+AC_CHECK_HEADERS([unistd.h])
+AC_FUNC_ERROR_AT_LINE
+AC_FUNC_FORK
+AC_FUNC_MKTIME
+AC_TYPE_PID_T
+AC_TYPE_SIZE_T
+AC_TYPE_SSIZE_T
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
