Updated version to 0.9.1

--- a/dsmrd/src/Makefile.am
+++ b/dsmrd/src/Makefile.am
@@ -41,6 +41,8 @@ dsmrd_SOURCES += util.h
 dsmrd_SOURCES += util.c
 dsmrd_SOURCES += crc16.h
 dsmrd_SOURCES += crc16.c
+dsmrd_SOURCES += ini.h
+dsmrd_SOURCES += ini.c
 
 noinst_PROGRAMS = p1sim
 p1sim_SOURCES = p1sim.c
