Added Avahi support

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,6 +43,10 @@ dsmrd_SOURCES += crc16.h
 dsmrd_SOURCES += crc16.c
 dsmrd_SOURCES += ini.h
 dsmrd_SOURCES += ini.c
+dsmrd_SOURCES += avahi.h
+dsmrd_SOURCES += avahi.c
+dsmrd_SOURCES += list.h
+dsmrd_SOURCES += list.c
 
 noinst_PROGRAMS = p1sim
 p1sim_SOURCES = p1sim.c
