--- a/configure.ac
+++ b/configure.ac
@@ -17,16 +17,21 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
+AC_PREREQ([2.69])
 AC_INIT([dsmrd], [0.9.2], [info@dsmrd.org])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AM_SILENT_RULES([yes])
-AC_PROG_CC
+AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
-AC_CHECK_FUNCS([memset])
-AC_CHECK_FUNCS([regcomp])
-AC_CHECK_FUNCS([select])
-AC_CHECK_FUNCS([socket])
-AC_CHECK_FUNCS([strerror])
+
+# Checks for programs.
+AC_PROG_CC
+
+# Checks for libraries.
+AC_CHECK_LIB([avahi-common], [avahi_free])
+AC_CHECK_LIB([avahi-client], [avahi_client_free])
+
+# Checks for header files.
 AC_CHECK_HEADERS([fcntl.h])
 AC_CHECK_HEADERS([limits.h])
 AC_CHECK_HEADERS([netinet/in.h])
@@ -38,18 +43,26 @@ AC_CHECK_HEADERS([sys/time.h])
 AC_CHECK_HEADERS([syslog.h])
 AC_CHECK_HEADERS([termios.h])
 AC_CHECK_HEADERS([unistd.h])
-AC_CHECK_LIB([avahi-common], [avahi_free])
-AC_CHECK_LIB([avahi-client], [avahi_client_free])
-AC_FUNC_ERROR_AT_LINE
-AC_FUNC_FORK
-AC_FUNC_MKTIME
+
+# Checks for typedefs, structures, and compiler characteristics.
+AC_CHECK_HEADER_STDBOOL
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
 AC_TYPE_SSIZE_T
-AC_CONFIG_FILES([
- Makefile
- src/Makefile
- www/Makefile
-])
+
+# Checks for library functions.
+AC_FUNC_ERROR_AT_LINE
+AC_FUNC_FORK
+AC_FUNC_MALLOC
+AC_FUNC_MKTIME
+AC_CHECK_FUNCS([memset])
+AC_CHECK_FUNCS([regcomp])
+AC_CHECK_FUNCS([select])
+AC_CHECK_FUNCS([socket])
+AC_CHECK_FUNCS([strerror])
+
+AC_CONFIG_FILES([Makefile
+                 src/Makefile
+                 www/Makefile])
 AC_OUTPUT
 
