Separated html and js code

--- a/www/Makefile.am
+++ b/www/Makefile.am
@@ -1,2 +1,5 @@
 wwwdir = $(pkgdatadir)/www
-dist_www_DATA = index.html
+dist_www_DATA  = index.html
+dist_www_DATA += jquery.min.js
+dist_www_DATA += main.js
+dist_www_DATA += screen.css
