Imported JQuery UI 1.12.1

--- a/www/Makefile.am
+++ b/www/Makefile.am
@@ -1,5 +1,7 @@
 wwwdir = $(pkgdatadir)/www
 dist_www_DATA  = index.html
 dist_www_DATA += jquery.min.js
+dist_www_DATA += jquery-ui.min.js
+dist_www_DATA += jquery-ui.min.css
 dist_www_DATA += main.js
 dist_www_DATA += screen.css
