--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -53,6 +53,8 @@ dsmrd_SOURCES += rest.h
 dsmrd_SOURCES += rest.c
 dsmrd_SOURCES += mqtt.h
 dsmrd_SOURCES += mqtt.c
+dsmrd_SOURCES += stats.h
+dsmrd_SOURCES += stats.c
 
 noinst_PROGRAMS = p1sim
 p1sim_SOURCES = p1sim.c
